--- a/labs/05-CacheSCA/CMakeLists.txt
+++ b/labs/05-CacheSCA/CMakeLists.txt
@@ -5,7 +5,7 @@ project(
   VERSION 1.0
   LANGUAGES C)
 
-include_directories(${PROJECT_BINARY_DIR}/include)
+include_directories(${PROJECT_SOURCE_DIR}/include)
 # add_executable(victim.out victim.c)
 # target_compile_options(victim.out PRIVATE -O0)
 add_executable(attacker.out attacker.c)
